// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs renders 1`] = `
<Provider app={{...}}>
  <WithStyles(inject-Breadcrumbs-with-app)>
    <inject-Breadcrumbs-with-app classes={{...}}>
      <Breadcrumbs classes={{...}} app={{...}}>
        <WithStyles(Typography) className="RSFBreadcrumbs-breadcrumbs-1" variant="caption">
          <Typography className="RSFBreadcrumbs-breadcrumbs-1" variant="caption" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
            <span className="MuiTypography-root-4 MuiTypography-caption-14 RSFBreadcrumbs-breadcrumbs-1">
              <WithStyles(Container)>
                <Container classes={{...}} inset={true}>
                  <div className="RSFContainer-root-39 RSFContainer-inset-40">
                    <span>
                      <inject-Track-with-app event="breadcrumbClicked" breadcrumb={{...}}>
                        <Track event="breadcrumbClicked" breadcrumb={{...}} app={{...}} trigger="onClick" onSuccess={[Function]}>
                          <WithStyles(inject-Link) to="/" onClick={[Function]}>
                            <inject-Link to="/" onClick={[Function]} classes={{...}}>
                              <Link to="/" onClick={[Function]} classes={{...}} history={[undefined]} router={[undefined]} location={{...}} anchorProps={{...}}>
                                <a data-moov-link="on" className="RSFLink-root-41" style={[undefined]} onClick={[Function]} href="/">
                                  Home
                                </a>
                              </Link>
                            </inject-Link>
                          </WithStyles(inject-Link)>
                        </Track>
                      </inject-Track-with-app>
                      <pure(KeyboardArrowRightIcon) className="RSFBreadcrumbs-separator-2">
                        <KeyboardArrowRightIcon className="RSFBreadcrumbs-separator-2">
                          <WithStyles(SvgIcon) className="RSFBreadcrumbs-separator-2">
                            <SvgIcon className="RSFBreadcrumbs-separator-2" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                              <svg className="MuiSvgIcon-root-42 RSFBreadcrumbs-separator-2" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                <path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z" />
                                <path fill="none" d="M0 0h24v24H0V0z" />
                              </svg>
                            </SvgIcon>
                          </WithStyles(SvgIcon)>
                        </KeyboardArrowRightIcon>
                      </pure(KeyboardArrowRightIcon)>
                    </span>
                    <span>
                      <inject-Track-with-app event="breadcrumbClicked" breadcrumb={{...}}>
                        <Track event="breadcrumbClicked" breadcrumb={{...}} app={{...}} trigger="onClick" onSuccess={[Function]}>
                          <WithStyles(inject-Link) to="/c/1" onClick={[Function]}>
                            <inject-Link to="/c/1" onClick={[Function]} classes={{...}}>
                              <Link to="/c/1" onClick={[Function]} classes={{...}} history={[undefined]} router={[undefined]} location={{...}} anchorProps={{...}}>
                                <a data-moov-link="on" className="RSFLink-root-41" style={[undefined]} onClick={[Function]} href="/c/1">
                                  Category 1
                                </a>
                              </Link>
                            </inject-Link>
                          </WithStyles(inject-Link)>
                        </Track>
                      </inject-Track-with-app>
                      <pure(KeyboardArrowRightIcon) className="RSFBreadcrumbs-separator-2">
                        <KeyboardArrowRightIcon className="RSFBreadcrumbs-separator-2">
                          <WithStyles(SvgIcon) className="RSFBreadcrumbs-separator-2">
                            <SvgIcon className="RSFBreadcrumbs-separator-2" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                              <svg className="MuiSvgIcon-root-42 RSFBreadcrumbs-separator-2" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                <path d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z" />
                                <path fill="none" d="M0 0h24v24H0V0z" />
                              </svg>
                            </SvgIcon>
                          </WithStyles(SvgIcon)>
                        </KeyboardArrowRightIcon>
                      </pure(KeyboardArrowRightIcon)>
                    </span>
                    <span className="RSFBreadcrumbs-current-3">
                      Subcategory 1
                    </span>
                    <span>
                       
                    </span>
                  </div>
                </Container>
              </WithStyles(Container)>
            </span>
          </Typography>
        </WithStyles(Typography)>
      </Breadcrumbs>
    </inject-Breadcrumbs-with-app>
  </WithStyles(inject-Breadcrumbs-with-app)>
</Provider>
`;

exports[`Breadcrumbs renders blank when an empty array of breadcrumbs is provided 1`] = `
<Provider app={{...}}>
  <WithStyles(inject-Breadcrumbs-with-app)>
    <inject-Breadcrumbs-with-app classes={{...}}>
      <Breadcrumbs classes={{...}} app={{...}}>
        <WithStyles(Typography) className="RSFBreadcrumbs-breadcrumbs-1" variant="caption">
          <Typography className="RSFBreadcrumbs-breadcrumbs-1" variant="caption" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
            <span className="MuiTypography-root-4 MuiTypography-caption-14 RSFBreadcrumbs-breadcrumbs-1">
              <WithStyles(Container)>
                <Container classes={{...}} inset={true}>
                  <div className="RSFContainer-root-39 RSFContainer-inset-40">
                    <span>
                       
                    </span>
                  </div>
                </Container>
              </WithStyles(Container)>
            </span>
          </Typography>
        </WithStyles(Typography)>
      </Breadcrumbs>
    </inject-Breadcrumbs-with-app>
  </WithStyles(inject-Breadcrumbs-with-app)>
</Provider>
`;

exports[`Breadcrumbs renders blank when no breadcrumbs are provided 1`] = `
<Provider app={{...}}>
  <WithStyles(inject-Breadcrumbs-with-app)>
    <inject-Breadcrumbs-with-app classes={{...}}>
      <Breadcrumbs classes={{...}} app={{...}}>
        <WithStyles(Typography) className="RSFBreadcrumbs-breadcrumbs-1" variant="caption">
          <Typography className="RSFBreadcrumbs-breadcrumbs-1" variant="caption" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
            <span className="MuiTypography-root-4 MuiTypography-caption-14 RSFBreadcrumbs-breadcrumbs-1">
              <WithStyles(Container)>
                <Container classes={{...}} inset={true}>
                  <div className="RSFContainer-root-39 RSFContainer-inset-40">
                    <span>
                       
                    </span>
                  </div>
                </Container>
              </WithStyles(Container)>
            </span>
          </Typography>
        </WithStyles(Typography)>
      </Breadcrumbs>
    </inject-Breadcrumbs-with-app>
  </WithStyles(inject-Breadcrumbs-with-app)>
</Provider>
`;
